# 2IMS00_SVM

./: .gitmodules  CMakeLists.txt  README.md  kernel.cpp  kernel_test.cpp  svm.cpp  svm_data_test.cpp  svm_test.cpp
